--- a/.github/workflows/nix-ci.yml
+++ b/.github/workflows/nix-ci.yml
@@ -2,17 +2,8 @@ name: "Nix CI"
 on: [pull_request, push, workflow_dispatch]
 jobs:
   nix-build:
-    name: ${{ matrix.pretty }} with nix (${{ matrix.derivation }})
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        derivation: [agda2lambox]
-        include:
-          - pretty: "Compile agda2lambox"
-            derivation: agda2lambox
     steps:
-    - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v22
-    - uses: DeterminateSystems/magic-nix-cache-action@v4
-    - run: nix build .#${{ matrix.derivation }} --print-build-logs
+    - uses: actions/checkout@v5
+    - uses: cachix/install-nix-action@v31
+    - run: nix build ./#agda2lambox --print-build-logs
