--- a/agda2lambox.cabal
+++ b/agda2lambox.cabal
@@ -36,6 +36,7 @@ executable agda2lambox
                        LambdaBox.Type,
                        LambdaBox.Env,
                        LambdaBox,
+                       LambdaBox.Typecheck,
                        CoqGen,
                        SExpr,
                        Paths_agda2lambox
