CI: fix Nix + disable deploy on PR

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
         make html
 
     - name: Deploy HTML website
-      # if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/master'
       uses: ad-m/github-push-action@v0.6.0
       with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
