--- a/.github/workflows/nix-ci.yml
+++ b/.github/workflows/nix-ci.yml
@@ -14,4 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v5
     - uses: cachix/install-nix-action@v31
+    - run: sudo apt install cabal-install
     - run: nix build ./#agda2lambox --print-build-logs
