include back carlos' draft

--- a/agda2lambox.cabal
+++ b/agda2lambox.cabal
@@ -35,6 +35,7 @@ executable agda2lambox
                        LambdaBox.Term,
                        LambdaBox.Type,
                        LambdaBox.Env,
+                       LambdaBox.Typecheck,
                        LambdaBox,
                        CoqGen,
                        SExpr,
