--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,9 +72,8 @@ jobs:
 
     - name: Deploy HTML website
       if: github.ref == 'refs/heads/master'
-      uses: ad-m/github-push-action@v0.6.0
+      uses: peaceiris/actions-gh-pages@v3
       with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
-          force: true
-          directory: test/html
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: test/html
+
