--- a/cabal.project
+++ b/cabal.project
@@ -2,3 +2,8 @@ packages: agda2lambox.cabal
 constraints: Agda +debug
 ignore-project: False
 tests: True
+
+source-repository-package
+  type:     git
+  location: https://github.com/peregrine-project/haskell-lambdabox.git
+  tag:      368d8248a63ac0727173fb63b2b8a747bfcc4f7e
