--- a/agda2lambox.cabal
+++ b/agda2lambox.cabal
@@ -36,7 +36,7 @@ executable agda2lambox
                        LambdaBox.Type,
                        LambdaBox.Env,
                        LambdaBox,
-                       CodeGen.Coq,
+                       CodeGen.Rocq,
                        CodeGen.SExpr,
                        Paths_agda2lambox
   autogen-modules:     Paths_agda2lambox
