--- a/test/Makefile
+++ b/test/Makefile
@@ -1,8 +1,15 @@
 # Index file `test/Tests.agda` is generated with `cabal test`
 MAIN=Tests
-.PHONY : html clean
+.PHONY : gen html clean
 
-html:
+default: html
+
+gen:
+	@echo == Generating WASM/C/OCaml/Cakeml/Rust/Elm ==
+	mkdir -p gen/
+	./compile.sh
+
+html: gen
 	@echo == Generating HTML ==
 	mkdir -p html/ && cp Agda.css html/
 	-cabal run -- agda2lambox --html --css=Agda.css $(MAIN).agda
@@ -10,4 +17,4 @@ html:
 	cp html/$(MAIN).html html/index.html
 
 clean:
-	rm -rf html/ dist/*.html dist/*.md
+	rm -rf gen/ html/ dist/*.html dist/*.md gen/*/*.html gen/*/*.md
